--- a/seminar_2_part4_Pandas.ipynb
+++ b/seminar_2_part4_Pandas.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pandas - библиотека для хранения/ обработки/ генерации данных"
+    "Pandas - библиотека для хранения/ обработки/ генерации данных. По сути своей предоставляет вам удобный формат обработки табличный данных. Основная цель библиотеки - ускорить и облегчить работу с данными."
    ]
   },
   {
@@ -728,6 +728,615 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Функция apply "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "По своей сути *apply* применяет переданную ей функцию к каждому элементу в итерируемом объекте, если рассматривать *pandas*, то это обычно *series* или *table*. \n",
+    "\n",
+    "*Apply* представляет собой аналог *map* из питона. Рассмотрим пример на питоне:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Исходный список: [ 1  3  5  7  9 11 13 15 17 20]\n",
+      "Список корней: [1.0, 1.732, 2.236, 2.646, 3.0, 3.316, 3.605, 3.873, 4.125, 4.473]\n",
+      "==========================\n",
+      "Выведем в удобном формате:\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(1, 1.0),\n",
+       " (3, 1.732),\n",
+       " (5, 2.236),\n",
+       " (7, 2.646),\n",
+       " (9, 3.0),\n",
+       " (11, 3.316),\n",
+       " (13, 3.605),\n",
+       " (15, 3.873),\n",
+       " (17, 4.125),\n",
+       " (20, 4.473)]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr = np.array(np.linspace(1,20,10, dtype=np.int8)) # создадим список из элементов\n",
+    "print('Исходный список:',arr)\n",
+    "\n",
+    "arr_sqrt = list(map(np.sqrt, arr)) # в Python3 map возвращает генератор, поэтому нужно конвертировать в список\n",
+    "print('Список корней:', arr_sqrt)\n",
+    "\n",
+    "print('==========================')\n",
+    "print('Выведем в удобном формате:')\n",
+    "list(zip(arr, arr_sqrt))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Как вы могли заметить выше, в map нужно передавать именно *имя функции* (np.sqrt, а не np.sqrt()), также объект для итерации должен быть *(барабанная дробь)* итерируемым"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-bdbc4962b2e0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0marr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msqrt\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0marr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'int' object is not iterable"
+     ]
+    }
+   ],
+   "source": [
+    "arr = 1\n",
+    "list(map(np.sqrt, arr))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Вот тут можно почитать подробнее и с примерами:\n",
+    "\n",
+    "https://www.learnpython.org/en/Map,_Filter,_Reduce"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Рассмотрим теперь примеры с *apply*:\n",
+    "\n",
+    "https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.Series.apply.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Исходный список:\n",
+      "a    1\n",
+      "b    2\n",
+      "c    3\n",
+      "d    4\n",
+      "dtype: int32\n",
+      "Список логарифмов:\n",
+      "a    0.000000\n",
+      "b    1.000000\n",
+      "c    1.584963\n",
+      "d    2.000000\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "ser = pd.Series(np.array([1,2,3,4]), index=['a','b','c','d'])\n",
+    "print('Исходный список:')\n",
+    "print(ser)\n",
+    "\n",
+    "print('Список логарифмов:')\n",
+    "print(ser.apply(np.log2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*apply* может принимать кастомные функции"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Исходный список:\n",
+      "a    1\n",
+      "b    2\n",
+      "c    3\n",
+      "d    4\n",
+      "dtype: int32\n",
+      "Новый список:\n",
+      "a   -10\n",
+      "b    -3\n",
+      "c    16\n",
+      "d    53\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_func(x, n=2, k=1):\n",
+    "    return x**n - k*3 + 4\n",
+    "\n",
+    "ser = pd.Series(np.array([1,2,3,4]), index=['a','b','c','d'])\n",
+    "print('Исходный список:')\n",
+    "print(ser)\n",
+    "\n",
+    "print('Новый список:')\n",
+    "print(ser.apply(my_func, args=(3,5)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Также удобным может быть передача *lambda* функции"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Исходный список:\n",
+      "a    a\n",
+      "b    b\n",
+      "c    c\n",
+      "d    d\n",
+      "dtype: object\n",
+      "Список степеней:\n",
+      "a    A\n",
+      "b    B\n",
+      "c    C\n",
+      "d    D\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "ser = pd.Series(['a','b','c','d'], index=['a','b','c','d'])\n",
+    "print('Исходный список:')\n",
+    "print(ser)\n",
+    "\n",
+    "print('Список степеней:')\n",
+    "print(ser.apply(lambda x: str.upper(x)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Рассмотрим применение *apply* к таблице\n",
+    "\n",
+    "https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.apply.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Height</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15</td>\n",
+       "      <td>150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>25</td>\n",
+       "      <td>180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>35</td>\n",
+       "      <td>175</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Age  Height\n",
+       "0   15     150\n",
+       "1   25     180\n",
+       "2   35     175"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = [[15, 150], [25, 180], [35, 175]] \n",
+    "df = pd.DataFrame(data, columns = ['Age', 'Height'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Height</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5</td>\n",
+       "      <td>140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15</td>\n",
+       "      <td>170</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>25</td>\n",
+       "      <td>165</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Age  Height\n",
+       "0    5     140\n",
+       "1   15     170\n",
+       "2   25     165"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.apply(lambda x: x-10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Если хотите применить *apply* к конкретному столбцу, то значения следует обновить в таблице, иначе они не сохранятся"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Height</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>65</td>\n",
+       "      <td>150</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>75</td>\n",
+       "      <td>180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>85</td>\n",
+       "      <td>175</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Age  Height\n",
+       "0   65     150\n",
+       "1   75     180\n",
+       "2   85     175"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Age'] = df['Age'].apply(lambda x: x+50)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Можно передать в качестве элементов списки, поведение будет зависеть от *result_type*, подробнее можно прочитать в документации"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Height</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Age  Height\n",
+       "0    5      25\n",
+       "1    5      25\n",
+       "2    5      25"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.apply(lambda x: [5, 25], axis=1, result_type='broadcast') # значения распределятся в соответствии с исходным размером"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    [5, 25, 55]\n",
+       "1    [5, 25, 55]\n",
+       "2    [5, 25, 55]\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.apply(lambda x: [5, 25, 55], axis=1, result_type='reduce') # значения будут в виде pandas.series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5</td>\n",
+       "      <td>25</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5</td>\n",
+       "      <td>25</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5</td>\n",
+       "      <td>25</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   0   1   2\n",
+       "0  5  25  55\n",
+       "1  5  25  55\n",
+       "2  5  25  55"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.apply(lambda x: [5, 25, 55], axis=1, result_type='expand') # значения будут развернуты в то кол-во столбцов, сколько значений"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Загрузка данных "
    ]
   },
@@ -1098,7 +1707,7 @@
     }
    ],
    "source": [
-    "df.describe() # 25/50/75 - значения соответствубщих квантилей"
+    "df.describe() # 25/50/75 - значения соответствующих квантилей"
    ]
   },
   {
@@ -1134,7 +1743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1202,7 +1811,7 @@
        "0     45      1      False  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2393,7 +3002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2533,7 +3142,7 @@
        "4       65     80      2      False  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2545,13 +3154,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "#            0\n",
+       "Id           0\n",
        "Name         0\n",
        "Type 1       0\n",
        "Type 2       0\n",
@@ -2567,7 +3176,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
