--- a/seminar_2_part4_Pandas.ipynb
+++ b/seminar_2_part4_Pandas.ipynb
@@ -50,6 +50,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Данные в *pandas* хранятся в специальном типе *pandas.Series*, таблицы (*pandas.DataFrame*) состоят из *series*. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -77,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Создадим кастомные индексы"
+    "Создадим кастомные индексы, индекс нужен для однозначного определения \"строки\" в таблице, он является своего рода уникальным ключем для данных в таблице, но, в отличие от некоторых БД, его уникальность не гарантирована."
    ]
   },
   {
@@ -108,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Передадим список списков, где на нижнем уровне лежат объекты таблицы"
+    "Передадим список списков, где на нижнем уровне лежат объекты таблицы. В результате этой операции мы создадим таблицу, где кол-во столбцов = максимальной длине среди верхнеуровневых элементов."
    ]
   },
   {
@@ -348,7 +355,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Добавим новый столбец к нашим данным"
+    "Добавим новый столбец к нашим данным. Это происходит так же, как и в питоновском словаре."
    ]
   },
   {
@@ -508,7 +515,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "К столбцам, как и ко всей таблице, можно применять различные операции"
+    "К столбцам, как и ко всей таблице, можно применять различные операции. Операция будет применена поэлементно к каждому значению в *series*"
    ]
   },
   {
@@ -656,6 +663,13 @@
     "data = [[15, 150], [25, 180], [35, 175]] \n",
     "df = pd.DataFrame(data, columns = ['Age', 'Height'])\n",
     "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Также операцию можно применить ко всей таблице, она тажке примениться к каждому элементу"
    ]
   },
   {
@@ -1358,7 +1372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1370,6 +1384,13 @@
    "metadata": {},
    "source": [
     "### Предварительный анализ "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*df.head(n)* вернет вам *n* первых индексов(строк) в таблице"
    ]
   },
   {
@@ -1488,6 +1509,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*df.info()* покажет основную информацию о таблице"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -1522,6 +1550,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*df.shape* вернет размерность таблицы в формате (строк, столбцов)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
@@ -1539,6 +1574,13 @@
    ],
    "source": [
     "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*df.describe()* покажет основную информацию о распределении значений в столбцах"
    ]
   },
   {
@@ -1733,8 +1775,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Можно переименовать столбцы, передав в *columns* словать, где ключ - столбец, который переименовываем, а значение - новое название"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2287,9 +2336,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Для выбора отдного значения разработчики рекомендуют использовать метод .at\n",
-    "\n",
-    "For getting fast access to a scalar (equivalent to the prior method)"
+    "Для выбора отдного значения разработчики рекомендуют использовать метод .at, потому что он работает быстрее"
    ]
   },
   {
@@ -2337,6 +2384,13 @@
    "metadata": {},
    "source": [
     "Выбор по позиции (не включает правую границу)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Обратите внимание на выбор индекса - если бы индексы у нас были не числовые (1,2,3), а, например (a,b,c), то в *.iloc* нужно передавать именно порядковый номер индекса, а не значение, как в *.loc*"
    ]
   },
   {
@@ -2494,6 +2548,13 @@
    "metadata": {},
    "source": [
     "##### Булева индексация "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Выборка из основной таблицы так же вернет вам *pandas.DataFrame*, его можно сохранить, а можно просто посмотреть"
    ]
   },
   {
@@ -2934,13 +2995,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "#             0\n",
+       "Id            0\n",
        "Name          0\n",
        "Type 1        0\n",
        "Type 2       84\n",
@@ -2956,13 +3017,13 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.isna(df).sum()"
+    "pd.isna(df).sum() # мы можем применить sum(), потому что нам возвращается маска из True/False, а True == 1"
    ]
   },
   {
@@ -3642,6 +3703,13 @@
    ],
    "source": [
     "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Выкинем столбец *\"Name\"*, потому что его нельзя оценить как-то"
    ]
   },
   {
@@ -4529,7 +4597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -4554,7 +4622,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Stage</th>\n",
-       "      <th>#</th>\n",
+       "      <th>Id</th>\n",
        "      <th>Total</th>\n",
        "      <th>HP</th>\n",
        "      <th>Attack</th>\n",
@@ -4610,7 +4678,7 @@
        "</div>"
       ],
       "text/plain": [
-       "   Stage          #       Total         HP     Attack    Defense    Sp. Atk  \\\n",
+       "   Stage         Id       Total         HP     Attack    Defense    Sp. Atk  \\\n",
        "0      1  85.632911  360.734177  57.708861  63.696203  60.797468  57.202532   \n",
        "1      2  70.589286  446.660714  69.642857  80.107143  75.964286  74.910714   \n",
        "2      3  47.375000  497.375000  77.312500  89.812500  77.812500  89.000000   \n",
@@ -4621,13 +4689,13 @@
        "2  84.375000  79.062500   0.000000  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.groupby('Stage', as_index=False).agg('mean')"
+    "df.groupby('Stage', as_index=False).agg('mean') # as_index=False нужен, чтобы 1-ый столбец результата не стал в итоге индексом"
    ]
   },
   {
@@ -4930,7 +4998,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "В качестве агрегационных функций можно передать несколько функций"
+    "В качестве агрегационных функций можно передать несколько функций и тогда для каждого столбца будет несколько агрегированых столбцов"
    ]
   },
   {
@@ -5133,7 +5201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Можно разным столбцам передать разные агрегационные функции"
+    "Можно разным столбцам передать разные агрегационные функции, тогда в результате будут только переданные в словарь столбцы"
    ]
   },
   {
